# librtlsdr

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  README.rtlfm_cmdfile  README.rtlsdr_rpc  README_improvements.md  circle.yml  cross_build_mingw32.sh  cross_build_mingw64.sh  install-blacklist.sh  mingw-w32-i686.cmake  mingw-w64-x64_64.cmake  protocol_rtl_tcp.txt  rtlsdr-blacklist.conf
.github/workflows/: build.yml  c-cpp.yml  vswin.yml
android/: README
android/jni/: Android.mk  Application.mk  librtlsdr.mk  tools.mk
cmake/: rtlsdrConfig.cmake
cmake/Modules/: FindLibUSB.cmake  FindThreads.cmake  Version.cmake
debian/: changelog  debianize  debianize_armhf  debianize_x32  debianize_x64
fedora/: libusb.h
include/: CMakeLists.txt  controlThread.h  rtl-sdr.h  rtl_tcp.h  rtlsdr_rpc.h  rtlsdr_rpc_msg.h  tuner_e4k.h  tuner_fc0012.h  tuner_fc2580.h  tuner_r82xx.h
src/: CMakeLists.txt  Makefile.am  controlThread.c  librtlsdr.c  rtl_adsb.c  rtl_app_ver.h  rtl_app_ver.h.in  rtl_biast.c  rtl_eeprom.c  rtl_fm.c  rtl_ir.c  rtl_power.c  rtl_raw2wav.c  rtl_rpcd.c  rtl_sdr.c  rtl_tcp.c  rtl_test.c  rtl_udp.c  rtl_wavestat.c  rtl_wavestream.c  rtlsdr.rc.in  rtlsdr_rpc.c  rtlsdr_rpc_msg.c  tuner_e4k.c  tuner_fc0012.c  tuner_fc0013.c  tuner_fc2580.c  tuner_r82xx.c
src/cmake/Modules/: Version.cmake
src/convenience/: convenience.c  convenience.h  rtl_convenience.c  rtl_convenience.h  waveread.c  waveread.h  wavewrite.c  wavewrite.h
win32-qtcreator/: CMakeLists.txt  README.txt
